add: implement a play log
log in interface showing player and machine choice

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <title></title>
 </head>
 
-<body class="dark-grey anta-regular">
+<body class="flex-general dark-grey anta-regular">
     <div class="flex-center winner-msg" id="winnerMsg">
         <p>Simple RPS | by NettoNE</p>
     </div>
-    <div class="flex-center">
+    <div class="flex-center game-log" id="gameLog">
+        <p>Check my Github!</p>
+    </div>
         <div class="flex-center btn-menu">
             <div class="flex-center" id="rock">
                 <button class="flex-center btn">🪨</button>
@@ -25,8 +27,7 @@
                 <button class="flex-center btn">✂️</button>
             </div>
         </div>
-    </div>
-    <footer class="flex-center baby-blue">
+    <footer class="flex-center light-blue">
         <div class="counters" id="userCounter">
             <p>PLAYER</p>
             <p>0</p>
