feature: add new game button
add a button so the player can restart the game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body class="flex-general dark-grey anta-regular">
     <div class="flex-center winner-log" id="winnerLog"></div>
     <div class="flex-center game-log" id="gameLog"></div>
+    <div class="new-game">
+        <button onclick="restartGame()" class="anta-regular">New Game</button>
+    </div>
     <div class="flex-center btn-menu">
         <div class="flex-center" id="rock">
             <button class="flex-center btn">🪨</button>
